# direct-file-transfer

./: .eslintrc.js  .gitignore  README.md  index.html  index.js  main.js  package-lock.json  package.json  prettierrc.json  tailwind.config.js  transfer.html  tsconfig.json  vite.config.ts
assets/styles/: main.css
src/: App.vue  index.html  index.js  main.ts  package-lock.json  package.json  transfer.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs
src-tauri/src/api/: broadcast.rs
src/assets/images/: icon.icns
src/assets/scripts/: main.js
src/assets/styles/: main.css
src/components/organisms/: FileDownloadTable.vue  FileHostingTable.vue
src/main/: main.ts  preload.js
src/pages/: Guest.vue  Host.vue
src/renderer/: App.global.css  App.tsx  index.ejs
src/renderer/components/: DownloadStats.module.scss  DownloadStats.tsx  Downloadables.module.scss  Downloadables.tsx  IPToolbar.css  IPToolbar.tsx  UploadForm.css  UploadForm.tsx
src/server/: index.js
src/store/: index.js
src/types/: File.ts
