[package]
name = "direct-file-transfer"
version = "1.0.1"
description = "Direct File Transfer"
authors = ["Wong Teck Han"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4.5.1"
tokio = "1.36.0"
uuid = "1.7.0"
lazy_static = "1.4.0"
regex = "1.10.3"
zip = "0.6.6"
local-ip-address = "0.6.1"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-fs = "2.0.0-beta.1"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-cors = "0.7.0"
actix-web-lab = "0.20.2"
parking_lot = "0.12.1"
tokio-stream = "0.1.14"
public-ip = "0.2.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
